# python-flask

./: Dockerfile  README.md  pyproject.toml  webq_app.py
k8s_yaml/: app-deployment-service.yml  flask-app-deployment.yml  flask-app-service.yaml
templates/: footer.html  home.html  jobitem.html  nav.html  service.html
