[tool.poetry]
name = "webq_python3_capability-website"
version = "0.1.0"
description = ""
authors = ["karthitcts <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
